# TD-RUST

./: .gitignore  README.md
rust-td 1/: .env  .env.example  Cargo.toml  README.md  rust-1.md
rust-td 1/migrations/: 0001_create_stock_prices.sql
rust-td 1/src/: main.rs
rust-td 1/tmp_pgdata/: postgresql.conf  postmaster.opts
rust-td 1/tmp_pgdata/base/1/: 1259  2619  2619_fsm  2619_vm  2696  2840  2841
rust-td 1/tmp_pgdata/base/16384/: 1247  1247_fsm  1249  1259  1259_fsm  16385  16386  16391  16393  2224  2579  2604  2606  2606_fsm  2608  2610  2610_fsm  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2701  2702  2703  2704  3455  5002  pg_internal.init
rust-td 1/tmp_pgdata/base/4/: 2619
rust-td 1/tmp_pgdata/base/5/: pg_internal.init
rust-td 1/tmp_pgdata/global/: 1262  2671  config_exec_params  pg_control  pg_internal.init
rust-td 1/tmp_pgdata/pg_stat/: pgstat.stat
rust-td 2/: Cargo.toml  README.md  client.html  schema.sql
rust-td 2/src/: main.rs
rust-td 2/ws-echo-server/: Cargo.toml
rust-td 2/ws-echo-server/src/: main.rs
rust-td 3/: README.md  rust-3.md
rust-td 3/loglyzer/: Cargo.toml  report.txt  stats.csv  stats.json
rust-td 3/loglyzer/src/: main.rs
rust-td 4/: Cargo.toml  LICENSE  rapport.md
rust-td 4/src/: benchmarks.rs  interfaces.rs  main.rs  orderbook.rs
rust-td 5/: Cargo.toml  README.md  rust-4.md
rust-td 5/src/: main.rs
