[package]
name = "loglyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
regex = "1.12.2"
prettytable = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
rayon = "1.10"
once_cell = "1.19"
rand = "0.8"

